# django_webpack_htmx_test

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  webpack.config.js
django_webpack_htmx_example/: asgi.py  settings.py  urls.py  wsgi.py
